--- a/src/components/Deposit/Deposit.module.css
+++ b/src/components/Deposit/Deposit.module.css
@@ -1,8 +1,9 @@
 .popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    background: black;
+     /* position: fixed; */
+    /* top: 40%;
+    left: 40%; */
+    /* transform: translate(-50%, -50%); */
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
