--- a/src/components/Withdraw/Withdraw.module.css
+++ b/src/components/Withdraw/Withdraw.module.css
@@ -1,8 +1,8 @@
 .popup {
-    position: fixed;
+    /* position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
