--- a/src/components/Gamification/Gamification.module.css
+++ b/src/components/Gamification/Gamification.module.css
@@ -1,11 +1,11 @@
-.card{
-    width: 16rem;
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-}
-.cardBody{
-    text-decoration-line: none;
-
+    text-align: center;
 }
