--- a/src/components/Withdraw/Withdraw.module.css
+++ b/src/components/Withdraw/Withdraw.module.css
@@ -1,10 +1,11 @@
 .popup {
-    /* position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
+    /* position: absolute; */
+    /* top: 40%;*/
+    /* left: 20%;  */
+    /* transform: translate(-50%, -50%); */
     background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgb(228, 221, 211);
+    border-radius: 10px;
+    /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); */
 }
